--- a/src/app/employee/create-employee.component.html
+++ b/src/app/employee/create-employee.component.html
@@ -24,3 +24,31 @@
     </div>
   </div>
 </form>
+
+<table border="1">
+  <tr>
+    <th style="padding: 10px">FormGroup</th>
+    <th style="padding: 10px">FormControl (fullName)</th>
+    <th style="padding: 10px">FormControl (email)</th>
+  </tr>
+  <tr>
+    <td style="padding: 10px">
+      Touched : {{ employeeForm.touched }}
+      <br/> Dirty : {{ employeeForm.dirty }}
+      <br/> valid : {{ employeeForm.valid }}
+      <br/> Form Values : <br/> {{employeeForm.value | json}}
+    </td>
+    <td style="padding: 10px">
+      Touched : {{ employeeForm.get('fullName').touched }}
+      <br/> Dirty : {{ employeeForm.get('fullName').dirty }}
+      <br/> Valid : {{ employeeForm.get('fullName').valid }}
+      <br/> FullName Value : {{employeeForm.get('fullName').value}}
+    </td>
+    <td style="padding: 10px">
+      Touched : {{ employeeForm.get('email').touched }}
+      <br/> Dirty : {{ employeeForm.get('email').dirty }}
+      <br/> Valid : {{ employeeForm.get('email').valid }}
+      <br/> Email Value : {{employeeForm.get('email').value}}
+    </td>
+  </tr>
+</table>
