--- a/src/app/employee/create-employee.component.html
+++ b/src/app/employee/create-employee.component.html
@@ -4,6 +4,7 @@
       <h3 class="panel-title">Create Employee</h3>
     </div>
     <div class="panel-body">
+       
       <div class="form-group">
         <label class="col-sm-2 control-label" for="fullName">Full Name</label>
         <div class="col-sm-8">
@@ -18,6 +19,39 @@
         </div>
       </div>
 
+      <div formGroupName="skills">
+        <div class="form-group">
+          <label class="col-sm-2 control-label" for="skillName">
+            Skill
+          </label>
+          <div class="col-sm-4">
+            <input type="text" class="form-control" id="skillName"
+                placeholder="Name" formControlName="skillName">
+          </div>
+          <div class="col-sm-4">
+            <input type="text" placeholder="Experience in Years"
+                class="form-control" formControlName="experienceInYears">
+          </div>
+        </div>
+      
+        <div class="form-group">
+          <label class="col-md-2 control-label">Proficiency</label>
+          <div class="col-md-8">
+            <label class="radio-inline">
+              <input id="proficiency" type="radio" value="beginner"
+                     formControlName="proficiency">Beginner
+            </label>
+            <label class="radio-inline">
+              <input id="proficiency" type="radio" value="intermediate"
+                     formControlName="proficiency">Intermediate
+            </label>
+            <label class="radio-inline">
+              <input id="proficiency" type="radio" value="advanced"
+                     formControlName="proficiency">Advanced
+            </label>
+          </div>
+        </div>      
+      </div>
     </div>
     <div class="panel-footer">
       <button class="btn btn-primary" type="submit">Save</button>
@@ -30,6 +64,7 @@
     <th style="padding: 10px">FormGroup</th>
     <th style="padding: 10px">FormControl (fullName)</th>
     <th style="padding: 10px">FormControl (email)</th>
+    <th style="padding: 10px">FormControl (Skils)</th>
   </tr>
   <tr>
     <td style="padding: 10px">
@@ -50,5 +85,11 @@
       <br/> Valid : {{ employeeForm.get('email').valid }}
       <br/> Email Value : {{employeeForm.get('email').value}}
     </td>
+    <!-- <td style="padding: 10px">
+      Touched : {{ employeeForm.get('skillName').touched }}
+      <br/> Dirty : {{ employeeForm.get('skillName').dirty }}
+      <br/> Valid : {{ employeeForm.get('skillName').valid }}
+      <br/> Email Value : {{employeeForm.get('skillName').value}}
+    </td> -->
   </tr>
 </table>
