--- a/src/app/employee/create-employee.component.html
+++ b/src/app/employee/create-employee.component.html
@@ -4,7 +4,7 @@
       <h3 class="panel-title">Create Employee</h3>
     </div>
     <div class="panel-body">
-       
+
       <div class="form-group">
         <label class="col-sm-2 control-label" for="fullName">Full Name</label>
         <div class="col-sm-8">
@@ -25,36 +25,35 @@
             Skill
           </label>
           <div class="col-sm-4">
-            <input type="text" class="form-control" id="skillName"
-                placeholder="Name" formControlName="skillName">
+            <input type="text" class="form-control" id="skillName" placeholder="Name" formControlName="skillName">
           </div>
           <div class="col-sm-4">
-            <input type="text" placeholder="Experience in Years"
-                class="form-control" formControlName="experienceInYears">
+            <input type="text" placeholder="Experience in Years" class="form-control"
+              formControlName="experienceInYears">
           </div>
         </div>
-      
+
         <div class="form-group">
           <label class="col-md-2 control-label">Proficiency</label>
           <div class="col-md-8">
             <label class="radio-inline">
-              <input id="proficiency" type="radio" value="beginner"
-                     formControlName="proficiency">Beginner
+              <input id="proficiency" type="radio" value="beginner" formControlName="proficiency">Beginner
             </label>
             <label class="radio-inline">
-              <input id="proficiency" type="radio" value="intermediate"
-                     formControlName="proficiency">Intermediate
+              <input id="proficiency" type="radio" value="intermediate" formControlName="proficiency">Intermediate
             </label>
             <label class="radio-inline">
-              <input id="proficiency" type="radio" value="advanced"
-                     formControlName="proficiency">Advanced
+              <input id="proficiency" type="radio" value="advanced" formControlName="proficiency">Advanced
             </label>
           </div>
-        </div>      
+        </div>
       </div>
     </div>
     <div class="panel-footer">
-      <button class="btn btn-primary" type="submit">Save</button>
+      <div class="btn-toolbar">
+        <button class="btn btn-primary" type="submit">Save</button>
+        <button class="btn btn-primary" type="button" (click)="onLoadDataClick()">Load Data</button>
+      </div>
     </div>
   </div>
 </form>
@@ -69,21 +68,21 @@
   <tr>
     <td style="padding: 10px">
       Touched : {{ employeeForm.touched }}
-      <br/> Dirty : {{ employeeForm.dirty }}
-      <br/> valid : {{ employeeForm.valid }}
-      <br/> Form Values : <br/> {{employeeForm.value | json}}
+      <br /> Dirty : {{ employeeForm.dirty }}
+      <br /> valid : {{ employeeForm.valid }}
+      <br /> Form Values : <br /> {{employeeForm.value | json}}
     </td>
     <td style="padding: 10px">
       Touched : {{ employeeForm.get('fullName').touched }}
-      <br/> Dirty : {{ employeeForm.get('fullName').dirty }}
-      <br/> Valid : {{ employeeForm.get('fullName').valid }}
-      <br/> FullName Value : {{employeeForm.get('fullName').value}}
+      <br /> Dirty : {{ employeeForm.get('fullName').dirty }}
+      <br /> Valid : {{ employeeForm.get('fullName').valid }}
+      <br /> FullName Value : {{employeeForm.get('fullName').value}}
     </td>
     <td style="padding: 10px">
       Touched : {{ employeeForm.get('email').touched }}
-      <br/> Dirty : {{ employeeForm.get('email').dirty }}
-      <br/> Valid : {{ employeeForm.get('email').valid }}
-      <br/> Email Value : {{employeeForm.get('email').value}}
+      <br /> Dirty : {{ employeeForm.get('email').dirty }}
+      <br /> Valid : {{ employeeForm.get('email').valid }}
+      <br /> Email Value : {{employeeForm.get('email').value}}
     </td>
     <!-- <td style="padding: 10px">
       Touched : {{ employeeForm.get('skillName').touched }}
